--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -398,3 +398,57 @@
  A96_idea_6_3_desc:0 "High Lorentish 6 desc"
  A96_idea_7_3:0 "High Lorentish 7"
  A96_idea_7_3_desc:0 "High Lorentish 7 desc" 
+
+ A78_ideas_1:0 "Roilsardi Ideas 1"
+ A78_ideas_1_start:0 "Roilsardi Traditions 1"
+ A78_ideas_1_bonus:0 "Roilsardi Ambition 1"
+ A78_idea_1_1:0 "Roilsardi 1"
+ A78_idea_1_1_desc:0 "Roilsardi 1 desc"
+ A78_idea_2_1:0 "Roilsardi 2"
+ A78_idea_2_1_desc:0 "Roilsardi 2 desc"
+ A78_idea_3_1:0 "Roilsardi 3"
+ A78_idea_3_1_desc:0 "Roilsardi 3 desc"
+ A78_idea_4_1:0 "Roilsardi 4"
+ A78_idea_4_1_desc:0 "Roilsardi 4 desc"
+ A78_idea_5_1:0 "Roilsardi 5"
+ A78_idea_5_1_desc:0 "Roilsardi 5 desc"
+ A78_idea_6_1:0 "Roilsardi 6"
+ A78_idea_6_1_desc:0 "Roilsardi 6 desc"
+ A78_idea_7_1:0 "Roilsardi 7"
+ A78_idea_7_1_desc:0 "Roilsardi 7 desc" 
+
+ A78_ideas_2:0 "Roilsardi Ideas 2"
+ A78_ideas_2_start:0 "Roilsardi Traditions 2"
+ A78_ideas_2_bonus:0 "Roilsardi Ambition 2"
+ A78_idea_1_2:0 "Roilsardi 1"
+ A78_idea_1_2_desc:0 "Roilsardi 1 desc"
+ A78_idea_2_2:0 "Roilsardi 2"
+ A78_idea_2_2_desc:0 "Roilsardi 2 desc"
+ A78_idea_3_2:0 "Roilsardi 3"
+ A78_idea_3_2_desc:0 "Roilsardi 3 desc"
+ A78_idea_4_2:0 "Roilsardi 4"
+ A78_idea_4_2_desc:0 "Roilsardi 4 desc"
+ A78_idea_5_2:0 "Roilsardi 5"
+ A78_idea_5_2_desc:0 "Roilsardi 5 desc"
+ A78_idea_6_2:0 "Roilsardi 6"
+ A78_idea_6_2_desc:0 "Roilsardi 6 desc"
+ A78_idea_7_2:0 "Roilsardi 7"
+ A78_idea_7_2_desc:0 "Roilsardi 7 desc" 
+
+ A78_ideas_3:0 "Roilsardi Ideas 3"
+ A78_ideas_3_start:0 "Roilsardi Traditions 3"
+ A78_ideas_3_bonus:0 "Roilsardi Ambition 3"
+ A78_idea_1_3:0 "Roilsardi 1"
+ A78_idea_1_3_desc:0 "Roilsardi 1 desc"
+ A78_idea_2_3:0 "Roilsardi 2"
+ A78_idea_2_3_desc:0 "Roilsardi 2 desc"
+ A78_idea_3_3:0 "Roilsardi 3"
+ A78_idea_3_3_desc:0 "Roilsardi 3 desc"
+ A78_idea_4_3:0 "Roilsardi 4"
+ A78_idea_4_3_desc:0 "Roilsardi 4 desc"
+ A78_idea_5_3:0 "Roilsardi 5"
+ A78_idea_5_3_desc:0 "Roilsardi 5 desc"
+ A78_idea_6_3:0 "Roilsardi 6"
+ A78_idea_6_3_desc:0 "Roilsardi 6 desc"
+ A78_idea_7_3:0 "Roilsardi 7"
+ A78_idea_7_3_desc:0 "Roilsardi 7 desc" 
