--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -452,3 +452,57 @@
  A78_idea_6_3_desc:0 "Roilsardi 6 desc"
  A78_idea_7_3:0 "Roilsardi 7"
  A78_idea_7_3_desc:0 "Roilsardi 7 desc" 
+
+ B78_ideas_1:0 "Carnetori Ideas 1"
+ B78_ideas_1_start:0 "Carnetori Traditions 1"
+ B78_ideas_1_bonus:0 "Carnetori Ambition 1"
+ B78_idea_1_1:0 "Carnetori 1"
+ B78_idea_1_1_desc:0 "Carnetori 1 desc"
+ B78_idea_2_1:0 "Carnetori 2"
+ B78_idea_2_1_desc:0 "Carnetori 2 desc"
+ B78_idea_3_1:0 "Carnetori 3"
+ B78_idea_3_1_desc:0 "Carnetori 3 desc"
+ B78_idea_4_1:0 "Carnetori 4"
+ B78_idea_4_1_desc:0 "Carnetori 4 desc"
+ B78_idea_5_1:0 "Carnetori 5"
+ B78_idea_5_1_desc:0 "Carnetori 5 desc"
+ B78_idea_6_1:0 "Carnetori 6"
+ B78_idea_6_1_desc:0 "Carnetori 6 desc"
+ B78_idea_7_1:0 "Carnetori 7"
+ B78_idea_7_1_desc:0 "Carnetori 7 desc" 
+
+ B78_ideas_2:0 "Carnetori Ideas 2"
+ B78_ideas_2_start:0 "Carnetori Traditions 2"
+ B78_ideas_2_bonus:0 "Carnetori Ambition 2"
+ B78_idea_1_2:0 "Carnetori 1"
+ B78_idea_1_2_desc:0 "Carnetori 1 desc"
+ B78_idea_2_2:0 "Carnetori 2"
+ B78_idea_2_2_desc:0 "Carnetori 2 desc"
+ B78_idea_3_2:0 "Carnetori 3"
+ B78_idea_3_2_desc:0 "Carnetori 3 desc"
+ B78_idea_4_2:0 "Carnetori 4"
+ B78_idea_4_2_desc:0 "Carnetori 4 desc"
+ B78_idea_5_2:0 "Carnetori 5"
+ B78_idea_5_2_desc:0 "Carnetori 5 desc"
+ B78_idea_6_2:0 "Carnetori 6"
+ B78_idea_6_2_desc:0 "Carnetori 6 desc"
+ B78_idea_7_2:0 "Carnetori 7"
+ B78_idea_7_2_desc:0 "Carnetori 7 desc" 
+
+ B78_ideas_3:0 "Carnetori Ideas 3"
+ B78_ideas_3_start:0 "Carnetori Traditions 3"
+ B78_ideas_3_bonus:0 "Carnetori Ambition 3"
+ B78_idea_1_3:0 "Carnetori 1"
+ B78_idea_1_3_desc:0 "Carnetori 1 desc"
+ B78_idea_2_3:0 "Carnetori 2"
+ B78_idea_2_3_desc:0 "Carnetori 2 desc"
+ B78_idea_3_3:0 "Carnetori 3"
+ B78_idea_3_3_desc:0 "Carnetori 3 desc"
+ B78_idea_4_3:0 "Carnetori 4"
+ B78_idea_4_3_desc:0 "Carnetori 4 desc"
+ B78_idea_5_3:0 "Carnetori 5"
+ B78_idea_5_3_desc:0 "Carnetori 5 desc"
+ B78_idea_6_3:0 "Carnetori 6"
+ B78_idea_6_3_desc:0 "Carnetori 6 desc"
+ B78_idea_7_3:0 "Carnetori 7"
+ B78_idea_7_3_desc:0 "Carnetori 7 desc" 
