Lencori colonial ideas

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -506,3 +506,57 @@
  B78_idea_6_3_desc:0 "Carnetori 6 desc"
  B78_idea_7_3:0 "Carnetori 7"
  B78_idea_7_3_desc:0 "Carnetori 7 desc" 
+
+ C00_ideas_1:0 "Lencori Colonial Ideas 1"
+ C00_ideas_1_start:0 "Lencori Colonial Traditions 1"
+ C00_ideas_1_bonus:0 "Lencori Colonial Ambition 1"
+ C00_idea_1_1:0 "Lencori Colonial 1"
+ C00_idea_1_1_desc:0 "Lencori Colonial 1 desc"
+ C00_idea_2_1:0 "Lencori Colonial 2"
+ C00_idea_2_1_desc:0 "Lencori Colonial 2 desc"
+ C00_idea_3_1:0 "Lencori Colonial 3"
+ C00_idea_3_1_desc:0 "Lencori Colonial 3 desc"
+ C00_idea_4_1:0 "Lencori Colonial 4"
+ C00_idea_4_1_desc:0 "Lencori Colonial 4 desc"
+ C00_idea_5_1:0 "Lencori Colonial 5"
+ C00_idea_5_1_desc:0 "Lencori Colonial 5 desc"
+ C00_idea_6_1:0 "Lencori Colonial 6"
+ C00_idea_6_1_desc:0 "Lencori Colonial 6 desc"
+ C00_idea_7_1:0 "Lencori Colonial 7"
+ C00_idea_7_1_desc:0 "Lencori Colonial 7 desc" 
+
+ C00_ideas_2:0 "Lencori Colonial Ideas 2"
+ C00_ideas_2_start:0 "Lencori Colonial Traditions 2"
+ C00_ideas_2_bonus:0 "Lencori Colonial Ambition 2"
+ C00_idea_1_2:0 "Lencori Colonial 1"
+ C00_idea_1_2_desc:0 "Lencori Colonial 1 desc"
+ C00_idea_2_2:0 "Lencori Colonial 2"
+ C00_idea_2_2_desc:0 "Lencori Colonial 2 desc"
+ C00_idea_3_2:0 "Lencori Colonial 3"
+ C00_idea_3_2_desc:0 "Lencori Colonial 3 desc"
+ C00_idea_4_2:0 "Lencori Colonial 4"
+ C00_idea_4_2_desc:0 "Lencori Colonial 4 desc"
+ C00_idea_5_2:0 "Lencori Colonial 5"
+ C00_idea_5_2_desc:0 "Lencori Colonial 5 desc"
+ C00_idea_6_2:0 "Lencori Colonial 6"
+ C00_idea_6_2_desc:0 "Lencori Colonial 6 desc"
+ C00_idea_7_2:0 "Lencori Colonial 7"
+ C00_idea_7_2_desc:0 "Lencori Colonial 7 desc" 
+
+ C00_ideas_3:0 "Lencori Colonial Ideas 3"
+ C00_ideas_3_start:0 "Lencori Colonial Traditions 3"
+ C00_ideas_3_bonus:0 "Lencori Colonial Ambition 3"
+ C00_idea_1_3:0 "Lencori Colonial 1"
+ C00_idea_1_3_desc:0 "Lencori Colonial 1 desc"
+ C00_idea_2_3:0 "Lencori Colonial 2"
+ C00_idea_2_3_desc:0 "Lencori Colonial 2 desc"
+ C00_idea_3_3:0 "Lencori Colonial 3"
+ C00_idea_3_3_desc:0 "Lencori Colonial 3 desc"
+ C00_idea_4_3:0 "Lencori Colonial 4"
+ C00_idea_4_3_desc:0 "Lencori Colonial 4 desc"
+ C00_idea_5_3:0 "Lencori Colonial 5"
+ C00_idea_5_3_desc:0 "Lencori Colonial 5 desc"
+ C00_idea_6_3:0 "Lencori Colonial 6"
+ C00_idea_6_3_desc:0 "Lencori Colonial 6 desc"
+ C00_idea_7_3:0 "Lencori Colonial 7"
+ C00_idea_7_3_desc:0 "Lencori Colonial 7 desc" 
