--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -560,3 +560,57 @@
  C00_idea_6_3_desc:0 "Lencori Colonial 6 desc"
  C00_idea_7_3:0 "Lencori Colonial 7"
  C00_idea_7_3_desc:0 "Lencori Colonial 7 desc" 
+
+ W16_ideas_1:0 "Rosica Ideas 1"
+ W16_ideas_1_start:0 "Rosica Traditions 1"
+ W16_ideas_1_bonus:0 "Rosica Ambition 1"
+ W16_idea_1_1:0 "Rosica 1"
+ W16_idea_1_1_desc:0 "Rosica 1 desc"
+ W16_idea_2_1:0 "Rosica 2"
+ W16_idea_2_1_desc:0 "Rosica 2 desc"
+ W16_idea_3_1:0 "Rosica 3"
+ W16_idea_3_1_desc:0 "Rosica 3 desc"
+ W16_idea_4_1:0 "Rosica 4"
+ W16_idea_4_1_desc:0 "Rosica 4 desc"
+ W16_idea_5_1:0 "Rosica 5"
+ W16_idea_5_1_desc:0 "Rosica 5 desc"
+ W16_idea_6_1:0 "Rosica 6"
+ W16_idea_6_1_desc:0 "Rosica 6 desc"
+ W16_idea_7_1:0 "Rosica 7"
+ W16_idea_7_1_desc:0 "Rosica 7 desc" 
+
+ W16_ideas_2:0 "Rosica Ideas 2"
+ W16_ideas_2_start:0 "Rosica Traditions 2"
+ W16_ideas_2_bonus:0 "Rosica Ambition 2"
+ W16_idea_1_2:0 "Rosica 1"
+ W16_idea_1_2_desc:0 "Rosica 1 desc"
+ W16_idea_2_2:0 "Rosica 2"
+ W16_idea_2_2_desc:0 "Rosica 2 desc"
+ W16_idea_3_2:0 "Rosica 3"
+ W16_idea_3_2_desc:0 "Rosica 3 desc"
+ W16_idea_4_2:0 "Rosica 4"
+ W16_idea_4_2_desc:0 "Rosica 4 desc"
+ W16_idea_5_2:0 "Rosica 5"
+ W16_idea_5_2_desc:0 "Rosica 5 desc"
+ W16_idea_6_2:0 "Rosica 6"
+ W16_idea_6_2_desc:0 "Rosica 6 desc"
+ W16_idea_7_2:0 "Rosica 7"
+ W16_idea_7_2_desc:0 "Rosica 7 desc" 
+
+ W16_ideas_3:0 "Rosica Ideas 3"
+ W16_ideas_3_start:0 "Rosica Traditions 3"
+ W16_ideas_3_bonus:0 "Rosica Ambition 3"
+ W16_idea_1_3:0 "Rosica 1"
+ W16_idea_1_3_desc:0 "Rosica 1 desc"
+ W16_idea_2_3:0 "Rosica 2"
+ W16_idea_2_3_desc:0 "Rosica 2 desc"
+ W16_idea_3_3:0 "Rosica 3"
+ W16_idea_3_3_desc:0 "Rosica 3 desc"
+ W16_idea_4_3:0 "Rosica 4"
+ W16_idea_4_3_desc:0 "Rosica 4 desc"
+ W16_idea_5_3:0 "Rosica 5"
+ W16_idea_5_3_desc:0 "Rosica 5 desc"
+ W16_idea_6_3:0 "Rosica 6"
+ W16_idea_6_3_desc:0 "Rosica 6 desc"
+ W16_idea_7_3:0 "Rosica 7"
+ W16_idea_7_3_desc:0 "Rosica 7 desc" 
