--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -614,3 +614,57 @@
  W16_idea_6_3_desc:0 "Rosica 6 desc"
  W16_idea_7_3:0 "Rosica 7"
  W16_idea_7_3_desc:0 "Rosica 7 desc" 
+
+ W15_ideas_1:0 "Vinlorn Ideas 1"
+ W15_ideas_1_start:0 "Vinlorn Traditions 1"
+ W15_ideas_1_bonus:0 "Vinlorn Ambition 1"
+ W15_idea_1_1:0 "Vinlorn 1"
+ W15_idea_1_1_desc:0 "Vinlorn 1 desc"
+ W15_idea_2_1:0 "Vinlorn 2"
+ W15_idea_2_1_desc:0 "Vinlorn 2 desc"
+ W15_idea_3_1:0 "Vinlorn 3"
+ W15_idea_3_1_desc:0 "Vinlorn 3 desc"
+ W15_idea_4_1:0 "Vinlorn 4"
+ W15_idea_4_1_desc:0 "Vinlorn 4 desc"
+ W15_idea_5_1:0 "Vinlorn 5"
+ W15_idea_5_1_desc:0 "Vinlorn 5 desc"
+ W15_idea_6_1:0 "Vinlorn 6"
+ W15_idea_6_1_desc:0 "Vinlorn 6 desc"
+ W15_idea_7_1:0 "Vinlorn 7"
+ W15_idea_7_1_desc:0 "Vinlorn 7 desc" 
+
+ W15_ideas_2:0 "Vinlorn Ideas 2"
+ W15_ideas_2_start:0 "Vinlorn Traditions 2"
+ W15_ideas_2_bonus:0 "Vinlorn Ambition 2"
+ W15_idea_1_2:0 "Vinlorn 1"
+ W15_idea_1_2_desc:0 "Vinlorn 1 desc"
+ W15_idea_2_2:0 "Vinlorn 2"
+ W15_idea_2_2_desc:0 "Vinlorn 2 desc"
+ W15_idea_3_2:0 "Vinlorn 3"
+ W15_idea_3_2_desc:0 "Vinlorn 3 desc"
+ W15_idea_4_2:0 "Vinlorn 4"
+ W15_idea_4_2_desc:0 "Vinlorn 4 desc"
+ W15_idea_5_2:0 "Vinlorn 5"
+ W15_idea_5_2_desc:0 "Vinlorn 5 desc"
+ W15_idea_6_2:0 "Vinlorn 6"
+ W15_idea_6_2_desc:0 "Vinlorn 6 desc"
+ W15_idea_7_2:0 "Vinlorn 7"
+ W15_idea_7_2_desc:0 "Vinlorn 7 desc" 
+
+ W15_ideas_3:0 "Vinlorn Ideas 3"
+ W15_ideas_3_start:0 "Vinlorn Traditions 3"
+ W15_ideas_3_bonus:0 "Vinlorn Ambition 3"
+ W15_idea_1_3:0 "Vinlorn 1"
+ W15_idea_1_3_desc:0 "Vinlorn 1 desc"
+ W15_idea_2_3:0 "Vinlorn 2"
+ W15_idea_2_3_desc:0 "Vinlorn 2 desc"
+ W15_idea_3_3:0 "Vinlorn 3"
+ W15_idea_3_3_desc:0 "Vinlorn 3 desc"
+ W15_idea_4_3:0 "Vinlorn 4"
+ W15_idea_4_3_desc:0 "Vinlorn 4 desc"
+ W15_idea_5_3:0 "Vinlorn 5"
+ W15_idea_5_3_desc:0 "Vinlorn 5 desc"
+ W15_idea_6_3:0 "Vinlorn 6"
+ W15_idea_6_3_desc:0 "Vinlorn 6 desc"
+ W15_idea_7_3:0 "Vinlorn 7"
+ W15_idea_7_3_desc:0 "Vinlorn 7 desc" 
