Swap national ideas event loc, changed swap ideas event id

--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -12,6 +12,9 @@
  CoT_i_events.2.b:0 "Improve their Diplomatic skill."
  CoT_i_events.2.c:0 "Improve their Military skill."
 
+ CoT_ideagroups.1.a:0 "Swap to [Root.GetName] ideas"
+ CoT_ideagroups.1.b:0 "Upgrade current ideas"
+
  improved_marines:0 "Improved Marines"
  cot_vassal_econimic:0 "Economy Focus"
  cot_vassal_military:0 "Military Focus"
