Wex MT Cannorwake 2
I should save my progress

--- a/localisation/Flavour_Wex_A30_l_english.yml
+++ b/localisation/Flavour_Wex_A30_l_english.yml
@@ -251,13 +251,13 @@
  A30_allies_to_the_west_title:0 "Allies to the West"
  A30_allies_to_the_west_desc:0 "TBA"
  A30_economic_cooperation_title:0 "Economic Cooperation"
- A30_economic_cooperation_desc:0 "TBA"
+ A30_economic_cooperation_desc:0 "By working closely with our allies and free cities in the most prosperous regions of the Empire, we can ensure our economic dominance as new trade from the East and North flows."
  A30_bolster_allies_title:0 "Bolster Allies"
  A30_bolster_allies_desc:0 "TBA"
  A30_alenic_diplomats_title:0 "Alenic Diplomats"
  A30_alenic_diplomats_desc:0 "TBA"
- A30_resettle_arannese_title:0 "Resettle the Arannese"
- A30_resettle_arannese_desc:0 "TBA"
+ A30_wex_settlers_title:0 "Expand Wexonard Unity"
+ A30_wex_settlers_desc:0 "Bisani, Arannese, Wexonard - these divisions in the borders only serve to weak our great state. Our prosperity demands we nurture a unified wexonard nation - those that disagree are welcome to leave."
  A30_develop_heartland_title:0 "Develop Heartlands"
  A30_develop_heartland_desc:0 "TBA"
  A30_corvurian_consideration_title:0 "Corvurian Consideration"
@@ -303,11 +303,12 @@
  wex_cot_southern_farms_tooltip:0 "Every Wexonard Farmland in the Borders region will get -25% development cost and 1 production dev."
  wex_cot_aligned_with_magi_tooltip:0 "By aligning with the Magi, Wex gets +0.1 Imperial Authority, 20% mage loyalty, and 20% mage influence as long as they are allied to the Magisterium."
  wex_cot_pick_a_league_tooltip:0 "Every country in the EoA must choose a side in the leagues, or face unrest of the most zealous in their population as the Emperor's rhetoric becomes fervent."
- wex_cot_economic_cooperation_tooltip:0 "By working closely with our allies and free cities in the most prosperous regions of the Empire, we can ensure our economic dominance as new trade from the East and North flows. \n This enacts a burgher estate privilege giving §Y20%§! influence, §G-0.5§! interest per annum, §G120§! yearly tax income, §G-20%§! tech cost, and §G20%§! production efficiency at 100% land ownership. All effects are scaled by ownership."
+ wex_cot_economic_cooperation_tooltip:0 "So long as we guarantee §YSilvelar§! and it maintains the §YFree City§! reform, we will gain §Y50%§! of their gold income as tax (max 5/month) and §G0.01§! Imperial Authority. \nThis enacts a burgher estate privilege giving §Y20%§! influence, §G-0.5§! interest per annum, §G120§! yearly tax income, §G-20%§! tech cost, and §G20%§! production efficiency at 100% land ownership. All effects are scaled by ownership."
  wex_cot_can_inherit_empire_tooltip:0 "Wex shall inherit the Empire! As long as our capital remains unsieged and we are the Emperor, we shall be able to inherit the Empire without much fuss."
  wex_cot_escanni_prince_tooltip:0 "As long as the nation is a part of the Empire, they will receive massive dev cost buff, but will find expansion harder. §Y-50%§! dev cost, but §R100%§! ae impact, and §R200%§! core creation and diplo annexation cost."
  wex_cot_chivalry_revived_tooltip:0 "Accepting this will give us +1 dice roll in own territory at the cost of +1 stab hit to declare wars and +500% core creation cost. We will also receive -500% dev cost until we reach 1,500 development. If we abandon chivalry, grave penalties will follow"
  wex_reformable_tt:0 "We will get a claim on all provinces in §GThe Borders§! region which have §YWexonard§! culture."
+ wex_cot_settlers_tt:0 "Every owned provinces with §YBisani§! and §YArannese§! culture will convert to §GWexonard§! culture, lose §R2§! Base Tax, lose §R2§! Base Production, §R2§! Base Manpower, and gain the following modifier: \n\n§YWexonard Settlers:§!for §Y50 years§! giving the following effects:\nLocal Development Cost: §G-20%§!\nLocal Tax Modifier: §R-30%§!\nLocal Manpower Modifier: §R-30%§!"
  
  #CoT Modifiers
  WEXONARD_MERCHANTHOUSES:0 "Wexonard Merchanthouses"
