Prep to implement alenic ideas

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -668,3 +668,25 @@
  W15_idea_6_3_desc:0 "Vinlorn 6 desc"
  W15_idea_7_3:0 "Vinlorn 7"
  W15_idea_7_3_desc:0 "Vinlorn 7 desc" 
+
+
+ ##### ALEN #####
+ 
+ A13_ideas_3:0 "Gawedi Ideas 3"
+ A13_ideas_3_start:0 "Gawedi Traditions 3"
+ A13_ideas_3_bonus:0 "Gawedi Ambition 3"
+
+ A13_idea_1_3:0 "Gawed 1"
+ A13_idea_1_3_desc:0 "Gawed 1 desc"
+ A13_idea_2_3:0 "Gawed 2"
+ A13_idea_2_3_desc:0 "Gawed 2 desc"
+ A13_idea_3_3:0 "Gawed 3"
+ A13_idea_3_3_desc:0 "Gawed 3 desc"
+ A13_idea_4_3:0 "Gawed 4"
+ A13_idea_4_3_desc:0 "Gawed 4 desc"
+ A13_idea_5_3:0 "Gawed 5"
+ A13_idea_5_3_desc:0 "Gawed 5 desc"
+ A13_idea_6_3:0 "Gawed 6"
+ A13_idea_6_3_desc:0 "Gawed 6 desc"
+ A13_idea_7_3:0 "Gawed 7"
+ A13_idea_7_3_desc:0 "Gawed 7 desc" 
