--- a/localisation/anb_cultures_l_english.yml
+++ b/localisation/anb_cultures_l_english.yml
@@ -514,8 +514,8 @@
  adzalan_lizardfolk:0 "Adzalan Lizardfolk"
  ashhama_lizardfolk:0 "Ashhama Lizardfolk"
  adzalanas_lizardfolk:0 "Adzalanas Lizardfolk"
- cyazizeta_lizardfolk: "Cyazizeta Lizardfolk"
- adeeni_lizardfolk: "Adeeni Lizardfolk"
+ cyazizeta_lizardfolk:0 "Cyazizeta Lizardfolk"
+ adeeni_lizardfolk:0 "Adeeni Lizardfolk"
  celestial:0 "Celestial"
  baashidi:0 "Baashidi"
  adeen:0 "Adeen"
@@ -529,13 +529,18 @@
  kombedak:0 "Kombedak"
  umsozidak:0 "Umsozidak"
  wakoodak:0 "Wakoodak"
- inyaswarosa: "Inyaswarosa"
+ inyaswarosa:0 "Inyaswarosa"
  chiunife:0 "Chiunife"
  soulseeker_ogre:0 "Soulseeker Ogre"
  eagle_command:0 "Eagle Hobgoblin"
- plateau_runsukhi: "Plateau Rünsukhi"
+ plateau_runsukhi:0 "Plateau Rünsukhi"
  khudi:0 "Khudi"
  oinukhudi:0 "Oinukhudi"
  anarkhudi:0 "Anarkhudi"
  hill_troll:0 "Hill Troll"
  ashwoven_harimari:0 "Ashwoven Harimari"
+ esmari_g:0 "Esmari"
+ rimmeric:0 "Rimmeric"
+ damerian:0 "Damerian"
+ bisani:0 "Bisani"
+
