Wex ideas and bumping

--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -15,6 +15,14 @@
  CoT_ideagroups.1.a:0 "Swap to [Root.GetName] ideas"
  CoT_ideagroups.1.b:0 "Upgrade current ideas"
 
+ cot_ideas_upgrade.2.t:0 "TODO"
+ cot_ideas_upgrade.2.d:0 "TODO"
+ CoT_ideagroups.2.a:0 "Wex must rule, forever!"
+
+ cot_ideas_upgrade.3.t:0 "TODO"
+ cot_ideas_upgrade.3.d:0 "TODO"
+ CoT_ideagroups.3.a:0 "Wex must rule again!"
+
  improved_marines:0 "Improved Marines"
  cot_vassal_econimic:0 "Economy Focus"
  cot_vassal_military:0 "Military Focus"
