--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  
  ##### LENCENOR #####
  
@@ -674,19 +674,54 @@ l_english:
  
  A13_ideas_3:0 "Gawedi Ideas 3"
  A13_ideas_3_start:0 "Gawedi Traditions 3"
- A13_ideas_3_bonus:0 "Gawedi Ambition 3"
+ A13_ideas_3_bonus:0 "Gawedi  Ambition 3"
+ A13_idea_1_3:0 "Gawedi 1"
+ A13_idea_1_3_desc:0 "Gawedi 1 desc"
+ A13_idea_2_3:0 "Gawedi 2"
+ A13_idea_2_3_desc:0 "Gawedi 2 desc"
+ A13_idea_3_3:0 "Gawedi 3"
+ A13_idea_3_3_desc:0 "Gawedi 3 desc"
+ A13_idea_4_3:0 "Gawedi 4"
+ A13_idea_4_3_desc:0 "Gawedi 4 desc"
+ A13_idea_5_3:0 "Gawedi 5"
+ A13_idea_5_3_desc:0 "Gawedi 5 desc"
+ A13_idea_6_3:0 "Gawedi 6"
+ A13_idea_6_3_desc:0 "Gawedi 6 desc"
+ A13_idea_7_3:0 "Gawedi 7"
+ A13_idea_7_3_desc:0 "Gawedi 7 desc" 
 
- A13_idea_1_3:0 "Gawed 1"
- A13_idea_1_3_desc:0 "Gawed 1 desc"
- A13_idea_2_3:0 "Gawed 2"
- A13_idea_2_3_desc:0 "Gawed 2 desc"
- A13_idea_3_3:0 "Gawed 3"
- A13_idea_3_3_desc:0 "Gawed 3 desc"
- A13_idea_4_3:0 "Gawed 4"
- A13_idea_4_3_desc:0 "Gawed 4 desc"
- A13_idea_5_3:0 "Gawed 5"
- A13_idea_5_3_desc:0 "Gawed 5 desc"
- A13_idea_6_3:0 "Gawed 6"
- A13_idea_6_3_desc:0 "Gawed 6 desc"
- A13_idea_7_3:0 "Gawed 7"
- A13_idea_7_3_desc:0 "Gawed 7 desc" 
+ A30_ideas_2:0 "Wexonard Ideas 2"
+ A30_ideas_2_start:0 "Wexonard Traditions 2"
+ A30_ideas_2_bonus:0 "Wexonard Ambition 2"
+ A30_idea_1_2:0 "Wexonard 1"
+ A30_idea_1_2_desc:0 "Wexonard 1 desc"
+ A30_idea_2_2:0 "Wexonard 2"
+ A30_idea_2_2_desc:0 "Wexonard 2 desc"
+ A30_idea_3_2:0 "Wexonard 3"
+ A30_idea_3_2_desc:0 "Wexonard 3 desc"
+ A30_idea_4_2:0 "Wexonard 4"
+ A30_idea_4_2_desc:0 "Wexonard 4 desc"
+ A30_idea_5_2:0 "Wexonard 5"
+ A30_idea_5_2_desc:0 "Wexonard 5 desc"
+ A30_idea_6_2:0 "Wexonard 6"
+ A30_idea_6_2_desc:0 "Wexonard 6 desc"
+ A30_idea_7_2:0 "Wexonard 7"
+ A30_idea_7_2_desc:0 "Wexonard 7 desc" 
+
+ A30_ideas_3:0 "Wexonard Ideas 3"
+ A30_ideas_3_start:0 "Wexonard Traditions 3"
+ A30_ideas_3_bonus:0 "Wexonard Ambition 3"
+ A30_idea_1_3:0 "Wexonard 1"
+ A30_idea_1_3_desc:0 "Wexonard 1 desc"
+ A30_idea_2_3:0 "Wexonard 2"
+ A30_idea_2_3_desc:0 "Wexonard 2 desc"
+ A30_idea_3_3:0 "Wexonard 3"
+ A30_idea_3_3_desc:0 "Wexonard 3 desc"
+ A30_idea_4_3:0 "Wexonard 4"
+ A30_idea_4_3_desc:0 "Wexonard 4 desc"
+ A30_idea_5_3:0 "Wexonard 5"
+ A30_idea_5_3_desc:0 "Wexonard 5 desc"
+ A30_idea_6_3:0 "Wexonard 6"
+ A30_idea_6_3_desc:0 "Wexonard 6 desc"
+ A30_idea_7_3:0 "Wexonard 7"
+ A30_idea_7_3_desc:0 "Wexonard 7 desc" 
