Drakkthar and Esedor prep

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -725,3 +725,39 @@
  A30_idea_6_3_desc:0 "Wexonard 6 desc"
  A30_idea_7_3:0 "Wexonard 7"
  A30_idea_7_3_desc:0 "Wexonard 7 desc" 
+
+ W19_ideas_2:0 "Drakksgard Ideas 2"
+ W19_ideas_2_start:0 "Drakksgard Traditions 2"
+ W19_ideas_2_bonus:0 "Drakksgard Ambition 2"
+ W19_idea_1_2:0 "Drakksgard 1"
+ W19_idea_1_2_desc:0 "Drakksgard 1 desc"
+ W19_idea_2_2:0 "Drakksgard 2"
+ W19_idea_2_2_desc:0 "Drakksgard 2 desc"
+ W19_idea_3_2:0 "Drakksgard 3"
+ W19_idea_3_2_desc:0 "Drakksgard 3 desc"
+ W19_idea_4_2:0 "Drakksgard 4"
+ W19_idea_4_2_desc:0 "Drakksgard 4 desc"
+ W19_idea_5_2:0 "Drakksgard 5"
+ W19_idea_5_2_desc:0 "Drakksgard 5 desc"
+ W19_idea_6_2:0 "Drakksgard 6"
+ W19_idea_6_2_desc:0 "Drakksgard 6 desc"
+ W19_idea_7_2:0 "Drakksgard 7"
+ W19_idea_7_2_desc:0 "Drakksgard 7 desc" 
+
+ W19_ideas_3:0 "Drakksgard Ideas 3"
+ W19_ideas_3_start:0 "Drakksgard Traditions 3"
+ W19_ideas_3_bonus:0 "Drakksgard Ambition 3"
+ W19_idea_1_3:0 "Drakksgard 1"
+ W19_idea_1_3_desc:0 "Drakksgard 1 desc"
+ W19_idea_2_3:0 "Drakksgard 2"
+ W19_idea_2_3_desc:0 "Drakksgard 2 desc"
+ W19_idea_3_3:0 "Drakksgard 3"
+ W19_idea_3_3_desc:0 "Drakksgard 3 desc"
+ W19_idea_4_3:0 "Drakksgard 4"
+ W19_idea_4_3_desc:0 "Drakksgard 4 desc"
+ W19_idea_5_3:0 "Drakksgard 5"
+ W19_idea_5_3_desc:0 "Drakksgard 5 desc"
+ W19_idea_6_3:0 "Drakksgard 6"
+ W19_idea_6_3_desc:0 "Drakksgard 6 desc"
+ W19_idea_7_3:0 "Drakksgard 7"
+ W19_idea_7_3_desc:0 "Drakksgard 7 desc" 
