--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -761,3 +761,39 @@
  W19_idea_6_3_desc:0 "Drakksgard 6 desc"
  W19_idea_7_3:0 "Drakksgard 7"
  W19_idea_7_3_desc:0 "Drakksgard 7 desc" 
+
+ W20_ideas_2:0 "Esedor Ideas 2"
+ W20_ideas_2_start:0 "Esedor Traditions 2"
+ W20_ideas_2_bonus:0 "Esedor Ambition 2"
+ W20_idea_1_2:0 "Esedor 1"
+ W20_idea_1_2_desc:0 "Esedor 1 desc"
+ W20_idea_2_2:0 "Esedor 2"
+ W20_idea_2_2_desc:0 "Esedor 2 desc"
+ W20_idea_3_2:0 "Esedor 3"
+ W20_idea_3_2_desc:0 "Esedor 3 desc"
+ W20_idea_4_2:0 "Esedor 4"
+ W20_idea_4_2_desc:0 "Esedor 4 desc"
+ W20_idea_5_2:0 "Esedor 5"
+ W20_idea_5_2_desc:0 "Esedor 5 desc"
+ W20_idea_6_2:0 "Esedor 6"
+ W20_idea_6_2_desc:0 "Esedor 6 desc"
+ W20_idea_7_2:0 "Esedor 7"
+ W20_idea_7_2_desc:0 "Esedor 7 desc" 
+
+ W20_ideas_3:0 "Esedor Ideas 3"
+ W20_ideas_3_start:0 "Esedor Traditions 3"
+ W20_ideas_3_bonus:0 "Esedor Ambition 3"
+ W20_idea_1_3:0 "Esedor 1"
+ W20_idea_1_3_desc:0 "Esedor 1 desc"
+ W20_idea_2_3:0 "Esedor 2"
+ W20_idea_2_3_desc:0 "Esedor 2 desc"
+ W20_idea_3_3:0 "Esedor 3"
+ W20_idea_3_3_desc:0 "Esedor 3 desc"
+ W20_idea_4_3:0 "Esedor 4"
+ W20_idea_4_3_desc:0 "Esedor 4 desc"
+ W20_idea_5_3:0 "Esedor 5"
+ W20_idea_5_3_desc:0 "Esedor 5 desc"
+ W20_idea_6_3:0 "Esedor 6"
+ W20_idea_6_3_desc:0 "Esedor 6 desc"
+ W20_idea_7_3:0 "Esedor 7"
+ W20_idea_7_3_desc:0 "Esedor 7 desc" 
