--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -797,3 +797,58 @@
  W20_idea_6_3_desc:0 "Esedor 6 desc"
  W20_idea_7_3:0 "Esedor 7"
  W20_idea_7_3_desc:0 "Esedor 7 desc" 
+
+
+ Z26_ideas_1:0 "Adshaw Ideas 1"
+ Z26_ideas_1_start:0 "Adshaw Traditions 1"
+ Z26_ideas_1_bonus:0 "Adshaw Ambition 1"
+ Z26_idea_1_1:0 "Adshaw 1"
+ Z26_idea_1_1_desc:0 "Adshaw 1 desc"
+ Z26_idea_2_1:0 "Adshaw 2"
+ Z26_idea_2_1_desc:0 "Adshaw 2 desc"
+ Z26_idea_3_1:0 "Adshaw 3"
+ Z26_idea_3_1_desc:0 "Adshaw 3 desc"
+ Z26_idea_4_1:0 "Adshaw 4"
+ Z26_idea_4_1_desc:0 "Adshaw 4 desc"
+ Z26_idea_5_1:0 "Adshaw 5"
+ Z26_idea_5_1_desc:0 "Adshaw 5 desc"
+ Z26_idea_6_1:0 "Adshaw 6"
+ Z26_idea_6_1_desc:0 "Adshaw 6 desc"
+ Z26_idea_7_1:0 "Adshaw 7"
+ Z26_idea_7_1_desc:0 "Adshaw 7 desc" 
+
+ Z26_ideas_2:0 "Adshaw Ideas 2"
+ Z26_ideas_2_start:0 "Adshaw Traditions 2"
+ Z26_ideas_2_bonus:0 "Adshaw Ambition 2"
+ Z26_idea_1_2:0 "Adshaw 1"
+ Z26_idea_1_2_desc:0 "Adshaw 1 desc"
+ Z26_idea_2_2:0 "Adshaw 2"
+ Z26_idea_2_2_desc:0 "Adshaw 2 desc"
+ Z26_idea_3_2:0 "Adshaw 3"
+ Z26_idea_3_2_desc:0 "Adshaw 3 desc"
+ Z26_idea_4_2:0 "Adshaw 4"
+ Z26_idea_4_2_desc:0 "Adshaw 4 desc"
+ Z26_idea_5_2:0 "Adshaw 5"
+ Z26_idea_5_2_desc:0 "Adshaw 5 desc"
+ Z26_idea_6_2:0 "Adshaw 6"
+ Z26_idea_6_2_desc:0 "Adshaw 6 desc"
+ Z26_idea_7_2:0 "Adshaw 7"
+ Z26_idea_7_2_desc:0 "Adshaw 7 desc" 
+
+ Z26_ideas_3:0 "Adshaw Ideas 3"
+ Z26_ideas_3_start:0 "Adshaw Traditions 3"
+ Z26_ideas_3_bonus:0 "Adshaw Ambition 3"
+ Z26_idea_1_3:0 "Adshaw 1"
+ Z26_idea_1_3_desc:0 "Adshaw 1 desc"
+ Z26_idea_2_3:0 "Adshaw 2"
+ Z26_idea_2_3_desc:0 "Adshaw 2 desc"
+ Z26_idea_3_3:0 "Adshaw 3"
+ Z26_idea_3_3_desc:0 "Adshaw 3 desc"
+ Z26_idea_4_3:0 "Adshaw 4"
+ Z26_idea_4_3_desc:0 "Adshaw 4 desc"
+ Z26_idea_5_3:0 "Adshaw 5"
+ Z26_idea_5_3_desc:0 "Adshaw 5 desc"
+ Z26_idea_6_3:0 "Adshaw 6"
+ Z26_idea_6_3_desc:0 "Adshaw 6 desc"
+ Z26_idea_7_3:0 "Adshaw 7"
+ Z26_idea_7_3_desc:0 "Adshaw 7 desc" 
