--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -852,3 +852,58 @@
  Z26_idea_6_3_desc:0 "Adshaw 6 desc"
  Z26_idea_7_3:0 "Adshaw 7"
  Z26_idea_7_3_desc:0 "Adshaw 7 desc" 
+
+
+ A23_ideas_1:0 "Vertesk Ideas 1"
+ A23_ideas_1_start:0 "Vertesk Traditions 1"
+ A23_ideas_1_bonus:0 "Vertesk Ambition 1"
+ A23_idea_1_1:0 "Vertesk 1"
+ A23_idea_1_1_desc:0 "Vertesk 1 desc"
+ A23_idea_2_1:0 "Vertesk 2"
+ A23_idea_2_1_desc:0 "Vertesk 2 desc"
+ A23_idea_3_1:0 "Vertesk 3"
+ A23_idea_3_1_desc:0 "Vertesk 3 desc"
+ A23_idea_4_1:0 "Vertesk 4"
+ A23_idea_4_1_desc:0 "Vertesk 4 desc"
+ A23_idea_5_1:0 "Vertesk 5"
+ A23_idea_5_1_desc:0 "Vertesk 5 desc"
+ A23_idea_6_1:0 "Vertesk 6"
+ A23_idea_6_1_desc:0 "Vertesk 6 desc"
+ A23_idea_7_1:0 "Vertesk 7"
+ A23_idea_7_1_desc:0 "Vertesk 7 desc" 
+
+ A23_ideas_2:0 "Vertesk Ideas 2"
+ A23_ideas_2_start:0 "Vertesk Traditions 2"
+ A23_ideas_2_bonus:0 "Vertesk Ambition 2"
+ A23_idea_1_2:0 "Vertesk 1"
+ A23_idea_1_2_desc:0 "Vertesk 1 desc"
+ A23_idea_2_2:0 "Vertesk 2"
+ A23_idea_2_2_desc:0 "Vertesk 2 desc"
+ A23_idea_3_2:0 "Vertesk 3"
+ A23_idea_3_2_desc:0 "Vertesk 3 desc"
+ A23_idea_4_2:0 "Vertesk 4"
+ A23_idea_4_2_desc:0 "Vertesk 4 desc"
+ A23_idea_5_2:0 "Vertesk 5"
+ A23_idea_5_2_desc:0 "Vertesk 5 desc"
+ A23_idea_6_2:0 "Vertesk 6"
+ A23_idea_6_2_desc:0 "Vertesk 6 desc"
+ A23_idea_7_2:0 "Vertesk 7"
+ A23_idea_7_2_desc:0 "Vertesk 7 desc" 
+
+ A23_ideas_3:0 "Vertesk Ideas 3"
+ A23_ideas_3_start:0 "Vertesk Traditions 3"
+ A23_ideas_3_bonus:0 "Vertesk Ambition 3"
+ A23_idea_1_3:0 "Vertesk 1"
+ A23_idea_1_3_desc:0 "Vertesk 1 desc"
+ A23_idea_2_3:0 "Vertesk 2"
+ A23_idea_2_3_desc:0 "Vertesk 2 desc"
+ A23_idea_3_3:0 "Vertesk 3"
+ A23_idea_3_3_desc:0 "Vertesk 3 desc"
+ A23_idea_4_3:0 "Vertesk 4"
+ A23_idea_4_3_desc:0 "Vertesk 4 desc"
+ A23_idea_5_3:0 "Vertesk 5"
+ A23_idea_5_3_desc:0 "Vertesk 5 desc"
+ A23_idea_6_3:0 "Vertesk 6"
+ A23_idea_6_3_desc:0 "Vertesk 6 desc"
+ A23_idea_7_3:0 "Vertesk 7"
+ A23_idea_7_3_desc:0 "Vertesk 7 desc" 
