More alenic ideas, also gawed idea bump event

--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -23,6 +23,10 @@
  cot_ideas_upgrade.3.d:0 "TODO"
  CoT_ideagroups.3.a:0 "Wex must rule again!"
 
+ cot_ideas_upgrade.4.t:0 "TODO"
+ cot_ideas_upgrade.4.d:0 "TODO"
+ CoT_ideagroups.4.a:0 "The Eagle Looms!"
+
  improved_marines:0 "Improved Marines"
  cot_vassal_econimic:0 "Economy Focus"
  cot_vassal_military:0 "Military Focus"
