--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -671,6 +671,24 @@
 
 
  ##### ALEN #####
+
+ A13_ideas_2:0 "Gawedi Ideas 2"
+ A13_ideas_2_start:0 "Gawedi Traditions 2"
+ A13_ideas_2_bonus:0 "Gawedi  Ambition 2"
+ A13_idea_1_2:0 "Gawedi 1"
+ A13_idea_1_2_desc:0 "Gawedi 1 desc"
+ A13_idea_2_2:0 "Gawedi 2"
+ A13_idea_2_2_desc:0 "Gawedi 2 desc"
+ A13_idea_3_2:0 "Gawedi 3"
+ A13_idea_3_2_desc:0 "Gawedi 3 desc"
+ A13_idea_4_2:0 "Gawedi 4"
+ A13_idea_4_2_desc:0 "Gawedi 4 desc"
+ A13_idea_5_2:0 "Gawedi 5"
+ A13_idea_5_2_desc:0 "Gawedi 5 desc"
+ A13_idea_6_2:0 "Gawedi 6"
+ A13_idea_6_2_desc:0 "Gawedi 6 desc"
+ A13_idea_7_2:0 "Gawedi 7"
+ A13_idea_7_2_desc:0 "Gawedi 7 desc" 
  
  A13_ideas_3:0 "Gawedi Ideas 3"
  A13_ideas_3_start:0 "Gawedi Traditions 3"
@@ -907,3 +925,114 @@
  A23_idea_6_3_desc:0 "Vertesk 6 desc"
  A23_idea_7_3:0 "Vertesk 7"
  A23_idea_7_3_desc:0 "Vertesk 7 desc" 
+
+
+ Z50_ideas_1:0 "Gawedi Regional Ideas 1"
+ Z50_ideas_1_start:0 "Gawedi Regional Traditions 1"
+ Z50_ideas_1_bonus:0 "Gawedi Regional Ambition 1"
+ Z50_idea_1_1:0 "Gawedi Regional 1"
+ Z50_idea_1_1_desc:0 "Gawedi Regional 1 desc"
+ Z50_idea_2_1:0 "Gawedi Regional 2"
+ Z50_idea_2_1_desc:0 "Gawedi Regional 2 desc"
+ Z50_idea_3_1:0 "Gawedi Regional 3"
+ Z50_idea_3_1_desc:0 "Gawedi Regional 3 desc"
+ Z50_idea_4_1:0 "Gawedi Regional 4"
+ Z50_idea_4_1_desc:0 "Gawedi Regional 4 desc"
+ Z50_idea_5_1:0 "Gawedi Regional 5"
+ Z50_idea_5_1_desc:0 "Gawedi Regional 5 desc"
+ Z50_idea_6_1:0 "Gawedi Regional 6"
+ Z50_idea_6_1_desc:0 "Gawedi Regional 6 desc"
+ Z50_idea_7_1:0 "Gawedi Regional 7"
+ Z50_idea_7_1_desc:0 "Gawedi Regional 7 desc" 
+
+ Z50_ideas_2:0 "Gawedi Regional Ideas 2"
+ Z50_ideas_2_start:0 "Gawedi Regional Traditions 2"
+ Z50_ideas_2_bonus:0 "Gawedi Regional Ambition 2"
+ Z50_idea_1_2:0 "Gawedi Regional 1"
+ Z50_idea_1_2_desc:0 "Gawedi Regional 1 desc"
+ Z50_idea_2_2:0 "Gawedi Regional 2"
+ Z50_idea_2_2_desc:0 "Gawedi Regional 2 desc"
+ Z50_idea_3_2:0 "Gawedi Regional 3"
+ Z50_idea_3_2_desc:0 "Gawedi Regional 3 desc"
+ Z50_idea_4_2:0 "Gawedi Regional 4"
+ Z50_idea_4_2_desc:0 "Gawedi Regional 4 desc"
+ Z50_idea_5_2:0 "Gawedi Regional 5"
+ Z50_idea_5_2_desc:0 "Gawedi Regional 5 desc"
+ Z50_idea_6_2:0 "Gawedi Regional 6"
+ Z50_idea_6_2_desc:0 "Gawedi Regional 6 desc"
+ Z50_idea_7_2:0 "Gawedi Regional 7"
+ Z50_idea_7_2_desc:0 "Gawedi Regional 7 desc" 
+
+ Z50_ideas_3:0 "Gawedi Regional Ideas 3"
+ Z50_ideas_3_start:0 "Gawedi Regional Traditions 3"
+ Z50_ideas_3_bonus:0 "Gawedi Regional Ambition 3"
+ Z50_idea_1_3:0 "Gawedi Regional 1"
+ Z50_idea_1_3_desc:0 "Gawedi Regional 1 desc"
+ Z50_idea_2_3:0 "Gawedi Regional 2"
+ Z50_idea_2_3_desc:0 "Gawedi Regional 2 desc"
+ Z50_idea_3_3:0 "Gawedi Regional 3"
+ Z50_idea_3_3_desc:0 "Gawedi Regional 3 desc"
+ Z50_idea_4_3:0 "Gawedi Regional 4"
+ Z50_idea_4_3_desc:0 "Gawedi Regional 4 desc"
+ Z50_idea_5_3:0 "Gawedi Regional 5"
+ Z50_idea_5_3_desc:0 "Gawedi Regional 5 desc"
+ Z50_idea_6_3:0 "Gawedi Regional 6"
+ Z50_idea_6_3_desc:0 "Gawedi Regional 6 desc"
+ Z50_idea_7_3:0 "Gawedi Regional 7"
+ Z50_idea_7_3_desc:0 "Gawedi Regional 7 desc"
+
+
+ A24_ideas_1:0 "Moorman Ideas 1"
+ A24_ideas_1_start:0 "Moorman Traditions 1"
+ A24_ideas_1_bonus:0 "Moorman Ambition 1"
+ A24_idea_1_1:0 "Moorman 1"
+ A24_idea_1_1_desc:0 "Moorman 1 desc"
+ A24_idea_2_1:0 "Moorman 2"
+ A24_idea_2_1_desc:0 "Moorman 2 desc"
+ A24_idea_3_1:0 "Moorman 3"
+ A24_idea_3_1_desc:0 "Moorman 3 desc"
+ A24_idea_4_1:0 "Moorman 4"
+ A24_idea_4_1_desc:0 "Moorman 4 desc"
+ A24_idea_5_1:0 "Moorman 5"
+ A24_idea_5_1_desc:0 "Moorman 5 desc"
+ A24_idea_6_1:0 "Moorman 6"
+ A24_idea_6_1_desc:0 "Moorman 6 desc"
+ A24_idea_7_1:0 "Moorman 7"
+ A24_idea_7_1_desc:0 "Moorman 7 desc" 
+
+ A24_ideas_2:0 "Moorman Ideas 2"
+ A24_ideas_2_start:0 "Moorman Traditions 2"
+ A24_ideas_2_bonus:0 "Moorman Ambition 2"
+ A24_idea_1_2:0 "Moorman 1"
+ A24_idea_1_2_desc:0 "Moorman 1 desc"
+ A24_idea_2_2:0 "Moorman 2"
+ A24_idea_2_2_desc:0 "Moorman 2 desc"
+ A24_idea_3_2:0 "Moorman 3"
+ A24_idea_3_2_desc:0 "Moorman 3 desc"
+ A24_idea_4_2:0 "Moorman 4"
+ A24_idea_4_2_desc:0 "Moorman 4 desc"
+ A24_idea_5_2:0 "Moorman 5"
+ A24_idea_5_2_desc:0 "Moorman 5 desc"
+ A24_idea_6_2:0 "Moorman 6"
+ A24_idea_6_2_desc:0 "Moorman 6 desc"
+ A24_idea_7_2:0 "Moorman 7"
+ A24_idea_7_2_desc:0 "Moorman 7 desc" 
+
+ A24_ideas_3:0 "Moorman Ideas 3"
+ A24_ideas_3_start:0 "Moorman Traditions 3"
+ A24_ideas_3_bonus:0 "Moorman Ambition 3"
+ A24_idea_1_3:0 "Moorman 1"
+ A24_idea_1_3_desc:0 "Moorman 1 desc"
+ A24_idea_2_3:0 "Moorman 2"
+ A24_idea_2_3_desc:0 "Moorman 2 desc"
+ A24_idea_3_3:0 "Moorman 3"
+ A24_idea_3_3_desc:0 "Moorman 3 desc"
+ A24_idea_4_3:0 "Moorman 4"
+ A24_idea_4_3_desc:0 "Moorman 4 desc"
+ A24_idea_5_3:0 "Moorman 5"
+ A24_idea_5_3_desc:0 "Moorman 5 desc"
+ A24_idea_6_3:0 "Moorman 6"
+ A24_idea_6_3_desc:0 "Moorman 6 desc"
+ A24_idea_7_3:0 "Moorman 7"
+ A24_idea_7_3_desc:0 "Moorman 7 desc" 
+
