--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -927,59 +927,59 @@
  A23_idea_7_3_desc:0 "Vertesk 7 desc" 
 
 
- Z50_ideas_1:0 "Gawedi Regional Ideas 1"
- Z50_ideas_1_start:0 "Gawedi Regional Traditions 1"
- Z50_ideas_1_bonus:0 "Gawedi Regional Ambition 1"
- Z50_idea_1_1:0 "Gawedi Regional 1"
- Z50_idea_1_1_desc:0 "Gawedi Regional 1 desc"
- Z50_idea_2_1:0 "Gawedi Regional 2"
- Z50_idea_2_1_desc:0 "Gawedi Regional 2 desc"
- Z50_idea_3_1:0 "Gawedi Regional 3"
- Z50_idea_3_1_desc:0 "Gawedi Regional 3 desc"
- Z50_idea_4_1:0 "Gawedi Regional 4"
- Z50_idea_4_1_desc:0 "Gawedi Regional 4 desc"
- Z50_idea_5_1:0 "Gawedi Regional 5"
- Z50_idea_5_1_desc:0 "Gawedi Regional 5 desc"
- Z50_idea_6_1:0 "Gawedi Regional 6"
- Z50_idea_6_1_desc:0 "Gawedi Regional 6 desc"
- Z50_idea_7_1:0 "Gawedi Regional 7"
- Z50_idea_7_1_desc:0 "Gawedi Regional 7 desc" 
+ A51_ideas_1:0 "Gawedi Regional Ideas 1"
+ A51_ideas_1_start:0 "Gawedi Regional Traditions 1"
+ A51_ideas_1_bonus:0 "Gawedi Regional Ambition 1"
+ A51_idea_1_1:0 "Gawedi Regional 1"
+ A51_idea_1_1_desc:0 "Gawedi Regional 1 desc"
+ A51_idea_2_1:0 "Gawedi Regional 2"
+ A51_idea_2_1_desc:0 "Gawedi Regional 2 desc"
+ A51_idea_3_1:0 "Gawedi Regional 3"
+ A51_idea_3_1_desc:0 "Gawedi Regional 3 desc"
+ A51_idea_4_1:0 "Gawedi Regional 4"
+ A51_idea_4_1_desc:0 "Gawedi Regional 4 desc"
+ A51_idea_5_1:0 "Gawedi Regional 5"
+ A51_idea_5_1_desc:0 "Gawedi Regional 5 desc"
+ A51_idea_6_1:0 "Gawedi Regional 6"
+ A51_idea_6_1_desc:0 "Gawedi Regional 6 desc"
+ A51_idea_7_1:0 "Gawedi Regional 7"
+ A51_idea_7_1_desc:0 "Gawedi Regional 7 desc" 
 
- Z50_ideas_2:0 "Gawedi Regional Ideas 2"
- Z50_ideas_2_start:0 "Gawedi Regional Traditions 2"
- Z50_ideas_2_bonus:0 "Gawedi Regional Ambition 2"
- Z50_idea_1_2:0 "Gawedi Regional 1"
- Z50_idea_1_2_desc:0 "Gawedi Regional 1 desc"
- Z50_idea_2_2:0 "Gawedi Regional 2"
- Z50_idea_2_2_desc:0 "Gawedi Regional 2 desc"
- Z50_idea_3_2:0 "Gawedi Regional 3"
- Z50_idea_3_2_desc:0 "Gawedi Regional 3 desc"
- Z50_idea_4_2:0 "Gawedi Regional 4"
- Z50_idea_4_2_desc:0 "Gawedi Regional 4 desc"
- Z50_idea_5_2:0 "Gawedi Regional 5"
- Z50_idea_5_2_desc:0 "Gawedi Regional 5 desc"
- Z50_idea_6_2:0 "Gawedi Regional 6"
- Z50_idea_6_2_desc:0 "Gawedi Regional 6 desc"
- Z50_idea_7_2:0 "Gawedi Regional 7"
- Z50_idea_7_2_desc:0 "Gawedi Regional 7 desc" 
+ A51_ideas_2:0 "Gawedi Regional Ideas 2"
+ A51_ideas_2_start:0 "Gawedi Regional Traditions 2"
+ A51_ideas_2_bonus:0 "Gawedi Regional Ambition 2"
+ A51_idea_1_2:0 "Gawedi Regional 1"
+ A51_idea_1_2_desc:0 "Gawedi Regional 1 desc"
+ A51_idea_2_2:0 "Gawedi Regional 2"
+ A51_idea_2_2_desc:0 "Gawedi Regional 2 desc"
+ A51_idea_3_2:0 "Gawedi Regional 3"
+ A51_idea_3_2_desc:0 "Gawedi Regional 3 desc"
+ A51_idea_4_2:0 "Gawedi Regional 4"
+ A51_idea_4_2_desc:0 "Gawedi Regional 4 desc"
+ A51_idea_5_2:0 "Gawedi Regional 5"
+ A51_idea_5_2_desc:0 "Gawedi Regional 5 desc"
+ A51_idea_6_2:0 "Gawedi Regional 6"
+ A51_idea_6_2_desc:0 "Gawedi Regional 6 desc"
+ A51_idea_7_2:0 "Gawedi Regional 7"
+ A51_idea_7_2_desc:0 "Gawedi Regional 7 desc" 
 
- Z50_ideas_3:0 "Gawedi Regional Ideas 3"
- Z50_ideas_3_start:0 "Gawedi Regional Traditions 3"
- Z50_ideas_3_bonus:0 "Gawedi Regional Ambition 3"
- Z50_idea_1_3:0 "Gawedi Regional 1"
- Z50_idea_1_3_desc:0 "Gawedi Regional 1 desc"
- Z50_idea_2_3:0 "Gawedi Regional 2"
- Z50_idea_2_3_desc:0 "Gawedi Regional 2 desc"
- Z50_idea_3_3:0 "Gawedi Regional 3"
- Z50_idea_3_3_desc:0 "Gawedi Regional 3 desc"
- Z50_idea_4_3:0 "Gawedi Regional 4"
- Z50_idea_4_3_desc:0 "Gawedi Regional 4 desc"
- Z50_idea_5_3:0 "Gawedi Regional 5"
- Z50_idea_5_3_desc:0 "Gawedi Regional 5 desc"
- Z50_idea_6_3:0 "Gawedi Regional 6"
- Z50_idea_6_3_desc:0 "Gawedi Regional 6 desc"
- Z50_idea_7_3:0 "Gawedi Regional 7"
- Z50_idea_7_3_desc:0 "Gawedi Regional 7 desc"
+ A51_ideas_3:0 "Gawedi Regional Ideas 3"
+ A51_ideas_3_start:0 "Gawedi Regional Traditions 3"
+ A51_ideas_3_bonus:0 "Gawedi Regional Ambition 3"
+ A51_idea_1_3:0 "Gawedi Regional 1"
+ A51_idea_1_3_desc:0 "Gawedi Regional 1 desc"
+ A51_idea_2_3:0 "Gawedi Regional 2"
+ A51_idea_2_3_desc:0 "Gawedi Regional 2 desc"
+ A51_idea_3_3:0 "Gawedi Regional 3"
+ A51_idea_3_3_desc:0 "Gawedi Regional 3 desc"
+ A51_idea_4_3:0 "Gawedi Regional 4"
+ A51_idea_4_3_desc:0 "Gawedi Regional 4 desc"
+ A51_idea_5_3:0 "Gawedi Regional 5"
+ A51_idea_5_3_desc:0 "Gawedi Regional 5 desc"
+ A51_idea_6_3:0 "Gawedi Regional 6"
+ A51_idea_6_3_desc:0 "Gawedi Regional 6 desc"
+ A51_idea_7_3:0 "Gawedi Regional 7"
+ A51_idea_7_3_desc:0 "Gawedi Regional 7 desc"
 
 
  A24_ideas_1:0 "Moorman Ideas 1"
